Fix text alignment: change from center to left in style.css

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -40,7 +40,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 18px;
-  text-align: center;
+  text-align: left;
   font-family: 'Inter';
   font-weight: 400;
   line-height: 1.2;
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p, span, a, li, label, input, textarea, button, div {
   font-family: var(--font-body);
-  text-align: center;
+  text-align: left;
 }
 
 .harvard-mega-menu p,
